{
    "name": "CameraInputActions",
    "maps": [
        {
            "name": "Camera",
            "id": "fc6c3c74-e078-4e35-9082-fe9e0abc0ef9",
            "actions": [
                {
                    "name": "OrbitActive",
                    "type": "PassThrough",
                    "id": "edebc6ba-b975-4121-94c6-8301271829f2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TranslateActive",
                    "type": "PassThrough",
                    "id": "ed9fb926-f540-4644-925b-5d77fcd61d9a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TranslateAlt",
                    "type": "PassThrough",
                    "id": "487972e7-1353-4ef3-9cb6-237cab0973ed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Drag",
                    "type": "PassThrough",
                    "id": "ef8c02c8-650d-4113-ae8e-df304ddbf3b1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Zoom",
                    "type": "PassThrough",
                    "id": "fccb47b7-7786-4232-a49d-452a2721b684",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0436fd18-031b-47ed-b0de-76d4838b361e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OrbitActive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f8e60cd-1f47-48b7-aa33-55296c17f8bb",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "601e1bbc-9727-4447-a624-131763c36704",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "Normalize(min=-1,max=1)",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e1694a49-2b83-419f-a972-c06e042845b5",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TranslateAlt",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d65d7c9a-d06a-4cd1-ade8-629c7ef4ef6a",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TranslateActive",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}